test/scc_test/exp/semantic-errors/095.t
void test()
{
    int* a;
    char* b;
    a = b;
}